clean up 3 classes about cnkb for vaadin 7